--- a/webapp/index2.html
+++ b/webapp/index2.html
@@ -10,7 +10,7 @@
 
 <form>
     <label>Name:</label>
-    <input type="text" placeholder="Enter your name"><br><br>
+    <input type="text" placeholder="Enter your Name"><br><br>
 
     <label>Email:</label>
     <input type="email" placeholder="Enter your email"><br><br>
